maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      } else {return true}
                     ^PledgeMaze:24: warning: enclosing method checkFinMur has result type Unit: return value discarded
      } else {return true}
              ^PledgeMaze:33: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^PledgeMaze:33: warning: enclosing method checkFinMur has result type Unit: return value discarded
  return false
  ^PledgeMaze:61: error: value unary_! is not a member of Unit
      if (!checkFinMur()){
          ^